--- a/VRChat/00/1070900.html
+++ b/VRChat/00/1070900.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "ctFUZLbwHLlFQhK9hVkluovKiMhKK7c0tW/jMwG0cFw="></script>
+    "UXH12qOeGfY6sh9LRzJoQ3W2mS+sGc5z5b34whw6fL4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRアバター用アクセサリ】デスクトップ無言勢の為のエンブレムSTRAC005-EM","description":"【VRアバター用アクセサリ】デスクトップ無言勢の為のエンブレムSTRAC005-EM\n\n◆モデル概要◆\n\nモデル型式:STRAC005-EM\n作者:倭文(しとり)\n\n\nデスクトップ無言勢がVRChatにインした際、話しかけられて返事ができないのがすごく申し訳なくなってしまうのですが(実体験)、その際にこのエンブレムつけとけば話しかけていただいた方が気分を害することがないかな? と思って作りました。\n\n\n導入方法は、前作のピアスSTRAC001-Eとほぼ同じですので\nそちらの導入説明書を参考にしてください。\n\n導入説明書は↓こちら\nhttp://toy-box.link/downloaddata/piercemanual.pdf\n\n\n◆仕様◆\n・ポリゴン数△80\n\n\n◆必須前提◆\nUnity(2017.4.15f1)\nVRChatSDK\n\n◆同梱してある使用シェーダーについて◆\n【Standard_Culloff shader / 裏面を表示するスタンダードシェーダ】\nこちらはフィオさん(@phio_alchemist)が公開している『裏面を表示するスタンダードシェーダ』の説明通りに制作・使用させていただいています。感謝。\n\nフィオさんによるシェーダ制作方法説明は↓こちら\nhttps://twitter.com/phio_alchemist/status/1025932028397543424\n\n\n\n著作権は放棄していませんが、特に制限を設けようとも思いません。ご自由にお使い下さい。\nクレジット表記の必要はありませんが、紹介していただけると作者が喜びますw\n\nもし表記していただける場合は↓このように書いていただけると嬉しいです。\n\n作者名:『倭文』『しとり』『sitori』のいずれか\nTwitter:@toy_box_sitori\nHP：http://toy-box.link\n\n◆同梱データ◆\n\nモデルデータ(unityパッケージ)\nテクスチャデータ(png)\n制作時のイラレアウトラインデータ\n\n\n◆モデルに関する問題点やご指摘がありましたら◆\n\ntwitter: @toy_box_sitori\nメールアドレス: booth@toy-box.link\nまでご一報下さい。\n\n◆修正履歴◆\n\n◇2018.10.28◇\nVer.1.0.0 公開","url":"https://booth.pm/ja/items/1070900","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/8de2029e-20d0-43f2-ab7b-c159eb417152/i/1070900/be24408d-169e-4fcb-8e2e-ac34637e3ed0_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ctFUZLbwHLlFQhK9hVkluovKiMhKK7c0tW/jMwG0cFw="></script>
+    nonce="UXH12qOeGfY6sh9LRzJoQ3W2mS+sGc5z5b34whw6fL4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -381,9 +381,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
