--- a/VRChat/39/1070139.html
+++ b/VRChat/39/1070139.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "MzDEbXSXim6Z5XyiQWCUg9XN7atPeiUxaAexvGDWJf4="></script>
+    "w1NiYw3cAeNXK2GSnJFVb5/mDhQDKtVcbAvQeQJFzbs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ボクシンググローブ　[FBXデータファイル 3DCG オブジェクト]","description":"【品名】 [ボクシンググローブ]FBXデータファイル3DCGオブジェクト\n[Boxing glove]fbx datafile 3DCG object\nフリー素材\n\nBG_L.fbx\nBG_R.fbx\ntexture.png\n\n◆利用想定　VRchat Vtuber\n◆ポリゴン数　△640(各320)ポリゴン\n\n【Version】1.00\n【最終更新日】2018.10.27\n【Copyright】©2018つくｘ２工房.Maiky\n\n※画像の女の子のモデルは付属しておりません。\n※アバターに装着する場合、手首や指を動かすと突き抜けが発生する場合があります。\n装着時はアバターの手首を固定する、又は手首を動かさない等の工夫が必要です。","url":"https://booth.pm/ja/items/1070139","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"180"},"image":"https://booth.pximg.net/c/620x620/50c466f8-ea25-4d84-97fb-a601d0055de7/i/1070139/c652a861-b66e-4c1b-82ec-301a088dc649_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="MzDEbXSXim6Z5XyiQWCUg9XN7atPeiUxaAexvGDWJf4="></script>
+    nonce="w1NiYw3cAeNXK2GSnJFVb5/mDhQDKtVcbAvQeQJFzbs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -477,9 +477,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
