--- a/VRChat/13/1064613.html
+++ b/VRChat/13/1064613.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "F3JI1O5M/wOE+cYRu+7M4EeODAVLNXkZWFNbA5Z8HTU="></script>
+    "VeZJkX9HN0x0mYPGM2fvd/6TW9jytMz/Fzx/l9Fo5ew="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Valuable Rooms","description":"八月二雪 Remix album \n\n1.夜の隣で(Yaca Mix)/YACA IN DA HOUSE\n2.水際(Re-Install The  Ghost)/obake\n3.夢幻(GF Remix)/じーえふ\n4.Hopeless(Midy Mix)/作曲バーチャルYouTuberミディ\n5.悲しみの色(Alter VIP-Remix)/john=hive\n\nllustration by 愛菜","url":"https://booth.pm/ja/items/1064613","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/4e6ac74b-2d4a-4b5d-bc76-8cc39bf34871/i/1064613/4f289a75-c592-45d0-af58-84874f4d86fa_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="F3JI1O5M/wOE+cYRu+7M4EeODAVLNXkZWFNbA5Z8HTU="></script>
+    nonce="VeZJkX9HN0x0mYPGM2fvd/6TW9jytMz/Fzx/l9Fo5ew="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -491,9 +491,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
