--- a/VRChat/76/1336076.html
+++ b/VRChat/76/1336076.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "N1h2v0Zb2EkMD17TbvrU2gW9N1O4kycJkRPavLt6pks="></script>
+    "8rhrHdex3j7b028z5rNOPmw8pY4pG+EfEjiEs/obXKA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル　ろぽり","description":"このアバターはAvatars3.0に対応しています。\n■データ概要\n\n・Unitypackage\n・FBX\n・Texture(png）\n・blenderファイル\n\n■利用規約\n・本データをご利用いただいた時点で利用規約に同意したものとみなします。\n・商用、非商用どちらも利用可能です。\n・本データの転載、再配布、ペデスタル利用、パブリックでのアップロードを禁止します。\n・本データ使用によるいかなる損害にも制作者は一切責任を負いません。\n・他人が不快に感じる表現や用途への使用を禁止します。。\n・宗教や政治活動での使用禁止します。\n・公序良俗に反する利用は禁止します。\n\n◆補足\n本規約における再配布の定義の中にVRCへのデータのアップロードは含まれておりません。ただし、アバターペデスタルへの利用、およびパブリック状態でのアップロードを禁止します。\n","url":"https://booth.pm/ja/items/1336076","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/1a3d7c54-a290-40a4-b267-0f2e041fef9a/i/1336076/5e5d8f13-7e0b-4d03-bc25-5f5848fdae89_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="N1h2v0Zb2EkMD17TbvrU2gW9N1O4kycJkRPavLt6pks="></script>
+    nonce="8rhrHdex3j7b028z5rNOPmw8pY4pG+EfEjiEs/obXKA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -426,9 +426,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
