--- a/VRChat/86/1335486.html
+++ b/VRChat/86/1335486.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "hvLPWzgSqgFOXDb5lExJ7i4vpQ5TYIRFCr1FTTmicLM="></script>
+    "HhhA7uw0myqr0pxalDKssRlg4j9OqEji0pm1JnL+dII="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat【CyberLaser】","description":"\n【概要】\nAlphaPenShaderを使用しました。ありがとうございます\n→https://booth.pm/ja/items/1116435\n\nUnityParticleエフェクト、Bloom（光るやつ）対応のモデルです。\n付属のAlphaPenShaderと合わせてご使用ください。\nまた、Shader、Material、Effect、Animation，音声は全て付属しています。\n動作は記載されている埋め込みコンテンツからご確認下さい。\n\n\n\nLaser.Unitypackage をクリック後、Readme.txtに従って導入してください。\n\n【利用規約】2020/02/01 更新\n1,利用規約への同意\n本商品をUnity上での動作を確認した時点で利用規約に同意したと見なします。\nまた、利用規約を見ずにその他利用形態にて使用した際には責任は負いません。\n2,利用規約の変更\n本商品の利用規約はGoogleフォーム等を通して変更される可能性があります。\n各個人としての考えをGoogleフォームにて”賛成””反対”を入力できます。\n変更された際の返金処理等は受け付けません。\n3,本商品について\nVRChatの利用を推奨したUnity上で動作するアセットです。他利用形態は動作を確認しておりません。\nバージョンアップの際に何かの問題点があった場合、バージョンアップした商品だけを利用禁止にする場合がございます。\n約一週間から一か月で商品の作成、もしくは修正を行います。\nまた、バージョンアップした商品の価値は0円として判断する物とします。\n4,利用規約で利用する用語の定義\n\"Unity\"：ゲームエンジンのサービスのこと。\n\"VRChat\"：ゲームサービスのこと。\n\"アセット\"：上記のUnity上にて動くシステムのこと。\n\"Googleフォーム\"：企業Googleが運営しているサービスのこと。この利用規約上ではアンケートの事を指す。\n\"Booth\"：この商品が販売されているサービスのこと。\n5,商品の利用に関するルール\n商品利用について：動画配信、ゲーム制作、アニメーション制作等へご利用いただけます。その他利用形態については、個別にお問い合わせください。\n6,商品の利用料金と支払い方法に関して\n全てBoothに依存します。支払い方法に関しましては個別にその他の支払方法を利用することはできません。\n7,商品内コンテンツについての権利の帰属\n商品上の理由から同梱されているコンテンツを除いて梱包されている商品の権利は\"yukonkon3\"に帰属します。\n8,自社サービスにおける禁止事項\n利用者がダウンロードした商品を、利用者が別の素材ダウンロードサイトで配布することを禁止します。\nこの商品にて他者の著作権や知的財産権を侵害することを禁止します。\nこの商品を相手に不具合等の影響が出る行為、誹謗中傷、宗教に利用することを禁止します。\nUnity上の問題にてプロジェクトを交換をしなければいけない場合、Boothの商品メッセージ機能を利用して購入番号と交換者の名前を記入して下さい。\n9,利用規約違反者に対するペナルティ\n商品の利用停止、また禁止事項に関しましてはそれらに分別されている法的処置を取らさせて頂きます。\n9,損害賠償、もしくは返金に関して。\n返金に関しましてはBooth運営に判断を委託する物とします。利用者個人の考えで返金をすることは基本ありません。\n損害賠償の一例として禁止事項の再配布を行った場合、ダウンロードされた数x商品の値段 を損害賠償として払っていただきます。\n10,免責に関して\nこの商品の利用者が利用したことによってVRChat上のトラブルが発生した際にも提供者は責任を負いません。Booth商品自体の問題がある場合を除きます。\n提供者の発言に問題があった場合にもこの商品自体には責任を負いません。\n11,サービスの中止、変更、終了に関する事項\nこの商品は予告も無く販売の停止を行う場合があります。\n事前の通知があった場合、サービスの中止、変更、終了に関して利用者に迷惑をかけたとしても、提供者が利用者に対して損害賠償責任を負いません。\n\n\n《注意：レーザーはワールドへ多大なる負荷を及ぼします》\n\n\n不具合を発見したら Twitter:@Lunatic_movie までお申しつけ下さい。","url":"https://booth.pm/ja/items/1335486","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/54f5618f-b309-402f-8d18-e23e925de1d4/i/1335486/d0be5cc6-b8c7-4a15-b78a-d0f551c0ba73_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="hvLPWzgSqgFOXDb5lExJ7i4vpQ5TYIRFCr1FTTmicLM="></script>
+    nonce="HhhA7uw0myqr0pxalDKssRlg4j9OqEji0pm1JnL+dII="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -474,9 +474,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
