--- a/VRChat/13/1335313.html
+++ b/VRChat/13/1335313.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "7PxgrC2bTj1WTqeBsH3TlBt6IhAzTLJhGmVkZayJeBc="></script>
+    "25v2pkmCUzjZ8eDW9Z2qP8WZ4lLsoGENY0afLMWR3aE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル男性アバター「ヨウ」　","description":"□□オリジナルアバター「ヨウ」□□\n\n本モデルはVRChatでの使用を想定して制作されています。\n\n・ポリゴン数: 21971△\n・ OVRLipsync: 15種類\n・ BlendShape: 82種類\n・ アニメーションオーバーライド設定済み 5種\n・リップシンク、アイトラッキング対応\n・Dynamic bone 設定済\n・arktoon-shaders 設定済\n・VRC SDK 設定済\n\n□同梱データ□\n\n\n・3Dモデルfbxデータ\n\nYOU.fbx: \n\n\n・テクスチャpngデータ\n\nkarada.png\n@karada.png(服に隠れている部分を透明にしたテクスチャです)\nclothes.png\nhair.png\n\n\n・PSDテクスチャデータ\n\nkarada.psd\nkami.psd\nhuku.psd\n\n\n・MatCap用\n\n@s.png\n\n\n・アウトラインのマスク用\n\nMask.png\n\n\n\n・UnityPackageデータ\n\nYOU.unitypackage\n\n\nReadme.txt\n\n\n□利用規約\n・本モデルを使用した時点で、利用規約に同意したものとみなします。\n・色替えや改造はご自由にどうぞ。\n・VRC以外の媒体（ゲーム、アニメーション、アプリ）での使用も可能です\n・営利利用、収益化なども制限しません。\n・R-18・R-18Gへの利用は制限しませんが、住み分けはしっかり行ってください。\n\n□禁止事項\n\n・公序良俗、良識に反する使用。\n・政治、宗教的利用、他者、他団体を傷つけたり陥れる行為への使用。\n・自作発言\n・購入者以外の方がモデルデータを使用できる状態にすること\n（再配布、アバターペデスタル及びアバタークローン化など）\n\n□免責事項\n\n・本モデルを使用して発生したいかなる損害、損失、不利益に関して、\n　当方は一切の責任を負いません。\n\n\n□導入方法\n\n①Unity 2017.4.15f1で新規プロジェクトを作成。\n\n②VRCSDKとarktoon-shadersとDynamic boneをインポートします。\n\n③同様に本データ付属のunitypackageをインポートします。\n\n④prepabをHierarchyに置き、VRCSDKを用いてアップロードをおこなってください。\n\n\n_________________________________________________________\n\nその他不明事項等、何かありましたらご連絡ください。\n\n製作者: 作成参謀\n\ntwitter: @sakuseisanbo\n\n\n\n4/30\n･服に隠れている部分を透明にしたテクスチャを追加し差し替えました。\n\n","url":"https://booth.pm/ja/items/1335313","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2500"},"image":"https://booth.pximg.net/c/620x620/20bbf43f-f3fa-4bdf-b36d-12828e517996/i/1335313/026cafb6-e128-4430-a52c-f080706dd057_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="7PxgrC2bTj1WTqeBsH3TlBt6IhAzTLJhGmVkZayJeBc="></script>
+    nonce="25v2pkmCUzjZ8eDW9Z2qP8WZ4lLsoGENY0afLMWR3aE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -449,9 +449,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
