--- a/VRChat/91/1309791.html
+++ b/VRChat/91/1309791.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "N0ahPPmZg8Lzu2lKrC+WupULH+G87Etytv/uKOrx/WQ="></script>
+    "o/1kAfEGQtkgYIRnSDhs+fjsj1iIgZpVgZlIHdEP5Z0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料】コリンズ＆ゾンビグラス　フォーマル系　12本セット","description":"コリンズグラス、ゾンビグラス、トールグラス、チムニーグラスとは300～400ml(小さいペットボトルより少し多い程度)が酌め、円筒形で小さな手でも持てるほど細身かつ背の高い大型グラス群です。\nその定義に似合った創作品の内、コリンズからゾンビのスタンダードもしくはフォーマルなデザインの12本を１つにまとめたセットになります。\n\n取りあえずの基本的なカクテルバーを作りたい人向けなセットになります。これならばポピュラーなロングドリンクの容器で困らないでしょう。\n\n――――――――――――――――――――――――――――\n利用規約コード　グリーン（画像参照）\n――――――――――――――――――――――――――――\nフォルダ構成 (zip)\n本体3Dモデル　コリンズグラス（fbx）　f0000番　△176\n本体3Dモデル　コリンズグラス（fbx）　f0001番　△154\n本体3Dモデル　ゾンビグラス　（fbx）　f0002番　△286\n本体3Dモデル　コリンズグラス（fbx）　f0003番　△222\n本体3Dモデル　コリンズグラス（fbx）　f0004番　△206\n本体3Dモデル　コリンズグラス（fbx）　f0005番　△374\n本体3Dモデル　ゾンビグラス　（fbx）　f0006番　△506\n本体3Dモデル　ゾンビグラス　（fbx）　f0007番　△110\n本体3Dモデル　ゾンビグラス　（fbx）　f0008番　△154\n本体3Dモデル　コリンズグラス（fbx）　f0009番　△220\n本体3Dモデル　ゾンビグラス　（fbx）　f0010番　△198\n本体3Dモデル　ゾンビグラス　（fbx）　f0011番　△154\nテクスチャフォルダ　おまけ\n　↳半透明テクスチャ（png）\n　↳木目テクスチャ　(png)\n　↳薄茶色陶器テクスチャ（png）\nread me 取扱説明書\n――――――――――――――――――――――――――――\n支援箱を用意させて頂いています。どうしてもという方はそちらへ\n――――――――――――――――――――――――――――\n更新履歴\nR1/06/16 支援箱を設置\n――――――――――――――――――――――――――――\nreadmeの文字化け等、不備がございましたらご連絡ください。","url":"https://booth.pm/ja/items/1309791","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/86beea84-9861-43dd-a335-adc7bcbf66c9/i/1309791/89185723-3c8e-4689-9675-117fef1d21a7_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="N0ahPPmZg8Lzu2lKrC+WupULH+G87Etytv/uKOrx/WQ="></script>
+    nonce="o/1kAfEGQtkgYIRnSDhs+fjsj1iIgZpVgZlIHdEP5Z0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -511,9 +511,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
