--- a/VRChat/01/1328501.html
+++ b/VRChat/01/1328501.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "/p6/1XXFH/+P2steWJ+foeZa6iQ5iq0ZOMXGwogCE9E="></script>
+    "QFBmnTXYO664114CjLcS/X9JwC2SYW+RPYZGi0dosUE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【INGY-K 002】fbxモデル","description":"かっこいい刀です。\n展開アニメーションはこんな感じです。\n https://twitter.com/ALERT_jp_555/status/1120570767333216256\n\n導入解説を付けていますが、理解するにはそれなりのunity知識を必要とします。不明な点があればtwitterまでご連絡ください。\n\n※追記:SDK3での動作想定をしていませんでしたが、簡易的な説明を導入解説に追加しました。","url":"https://booth.pm/ja/items/1328501","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/d0287a31-78e9-429d-804d-e3582e9dc539/i/1328501/8fd57213-7f1f-4475-9976-14364d34ef36_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="/p6/1XXFH/+P2steWJ+foeZa6iQ5iq0ZOMXGwogCE9E="></script>
+    nonce="QFBmnTXYO664114CjLcS/X9JwC2SYW+RPYZGi0dosUE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -489,9 +489,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
